[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/BTN OK.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/Settings BG.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Checkbox 01.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/Checkbox 01_checked.png" type="Texture" id=5]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=6]


[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[node name="Settings" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.682353 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -115.5
margin_right = 55.5
margin_bottom = 115.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
margin_top = 10.0
margin_right = 111.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
valign = 1

[node name="OkButton" type="TextureButton" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.410797
margin_top = -61.546
margin_right = 0.410797
margin_bottom = -24.546
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="Background"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 43.0
margin_right = -18.0
margin_bottom = 60.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/MusicButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
custom_fonts/font = SubResource( 2 )
text = "Music"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="Background"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 64.0
margin_right = -18.0
margin_bottom = 60.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/SoundButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
custom_fonts/font = SubResource( 2 )
text = "Sound"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="toggled" from="Background/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="Background/SoundButton" to="." method="_on_SoundButton_toggled"]
